# otus_cpp_9

./: .travis.yml  CMakeLists.txt  README.md
include/: rai_concept.h
src/: demo.cpp
